<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="650dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoulteY="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/surnameTV"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Surname" />

            <EditText
                android:id="@+id/surnameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Surname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Age" />

            <EditText
                android:id="@+id/ageET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Age"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fieldOfStudyTV"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Field_of_study" />

            <EditText
                android:id="@+id/fieldOfStudyET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Field_of_study"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idTV"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Year_of_study" />

            <EditText
                android:id="@+id/idET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Year_of_study"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/averageFromStudiesTV"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Average_from_studies" />

            <EditText
                android:id="@+id/averageFromStudiesET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/Average_from_studies"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/DELETE"
                app:icon="@android:drawable/ic_delete" />

            <Button
                android:id="@+id/buttonFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/FIND"
                app:icon="@android:drawable/ic_menu_search" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/ADD"
                app:icon="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/CLEAR"
                app:icon="@android:drawable/ic_notification_clear_all" />

            <Button
                android:id="@+id/buttonShowAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/SHOW_ALL"
                app:icon="@android:drawable/ic_dialog_dialer" />

            <Button
                android:id="@+id/buttonDeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/TOAST"
                app:icon="@android:drawable/ic_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Autor" />

            <Button
                android:id="@+id/buttonOpinion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Opinion" />

            <Button
                android:id="@+id/buttonAvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/AVERAGE_OF_GRADES" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradient_button_background"
                android:text="@string/MODIFY"
                app:icon="@android:drawable/ic_menu_edit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/Result_of_operation"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>